# Cola

./: .gitignore  Notes.txt  README.md  Vault.enc  cola.py  key.key  pass_manager.py  pyproject.toml  test.py
src/: .test.txt.swp  Cola - a cli app for password management  cli.py  crypto.py  sessions.py  test.txt  test.txt.save  vault.py
src/cola/: __init__.py  cli.py  drive.py  sessions.py  vault.py
